fix: move sidebar to right side on mobile

--- a/src/scss/blocks/sidebar.scss
+++ b/src/scss/blocks/sidebar.scss
@@ -143,6 +143,10 @@
       }
     }
   }
+  @media (max-width: 567px) {
+    right: 0;
+    left: auto;
+  }
 }
 
 .active {
